# Recordchat

./: .env.example  .gitignore  GUIDE.md  Makefile  README.md  SPEC.md  chat.md  dl数据下载清单.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: chat.py  health.py  ingest.py
backend/app/connectors/: __init__.py  base.py
backend/app/core/: config.py  embeddings.py  llm.py  logging.py
backend/app/domain/: glossary.py  jsonld_generator.py  one_record_schema.py  ontology_graph.py  ontology_parser.py
backend/app/models/: chat.py  source.py
backend/app/rag/: chunker.py  ingest.py  loader.py  pipeline.py  prompt.py  reranker.py  retriever.py
backend/tests/: conftest.py  test_chat_api.py  test_connectors.py  test_health.py  test_ontology.py  test_pipeline.py  test_providers.py  test_retriever.py
docs/: UI改进方案.md  architecture.md  data_addition_workflow.md  data_compliance_report.md  data_download_guide.md  data_source_plan.md  data_sources_registry.yaml  demo_cheat_sheet.md  demo_script.md  roadmap.md  source_usage_policy.md  ui_refinement_manual_test.md  v0.2_development_plan.md
frontend/: components.json  package-lock.json  package.json  tailwind.config.ts
scripts/: add_ne_one_api_sidecars.py  add_official_doc_sidecars.py  create_v02_issues.sh  evaluate_rag.py  ingest_docs.py  normalize_manual_sources.py  reset_index.py  run_data_addition_workflow.py  verify_source_governance.py
(+37 files in other folders)
